--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  margin: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align: center;
+  min-height: 50vh;
+  background-color: #692fb6;
+  color: rgb(255, 254, 254);
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+select, input{
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 15px;
+  width: 90px;
+  text-align: center;
+  height: 30px;
+  border-radius: 10px;
+  border-style: none;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+button{
+  height: 36px;
+  width: 90px;
+  border-radius: 10px;
+  text-align: center;
+  cursor: pointer;
+  color: rgb(255, 254, 254);
+  border-style: none;
+  transition-duration: 2s;
+  background-color: #1e073d;
+}
+.button:hover{
+  color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 1px 1px 2px #200247;
+  background-color: #3f0888;
+}
+
+.amount{
+  font-size: x-large;
+}
+
+.error{
+  color: red;
+}
+
+label{
+  font-size: 18px;
 }
